--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,12 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
+  "semi": true,
   "tabWidth": 2,
   "singleQuote": true,
+  "useTabs": false,
   "printWidth": 100,
-  "trailingComma": "none"
+  "trailingComma": "all",
+  "vueIndentScriptAndStyle": true,
+  "endOfLine": "auto",
+  "htmlWhitespaceSensitivity": "strict"
 }
