--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     ]
   },
   "dependencies": {
+    "ant-design-vue": "^4.1.2",
+    "mitt": "^3.0.1",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -31,7 +35,7 @@
     "@commitlint/config-conventional": "^18.6.2",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.11.10",
+    "@types/node": "^20.11.20",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
