--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.1.2",
+    "crypto-js": "^4.2.0",
     "mitt": "^3.0.1",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
@@ -35,6 +36,7 @@
     "@commitlint/config-conventional": "^18.6.2",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.11.20",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
