chore(custom): 开发store中

--- a/.env.development
+++ b/.env.development
@@ -5,5 +5,10 @@ VITE_PUBLIC_PATH=/
 # VITE_GLOB_BASE_URL=https://dapi.dpt2africa.com
 VITE_GLOB_BASE_URL=/api
 
+# File upload address， optional
+VITE_GLOB_UPLOAD_URL=/upload
+
+VITE_GLOB_API_URL_PREFIX=
+
 # Request timeout
 VITE_GLOB_TIMEOUT=10000
