--- a/.env.production
+++ b/.env.production
@@ -4,5 +4,10 @@ VITE_PUBLIC_PATH=/
 # Basic interface address
 VITE_GLOB_BASE_URL=https://dapi.dpt2africa.com
 
+# File upload address， optional
+VITE_GLOB_UPLOAD_URL=/upload
+
+VITE_GLOB_API_URL_PREFIX=
+
 # Request timeout
 VITE_GLOB_TIMEOUT=10000
