--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.1.2",
+    "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.10",
+    "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
@@ -37,6 +40,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/crypto-js": "^4.2.2",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.20",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
