--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.4.15",
@@ -42,6 +43,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.20",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
